# PukalendarApp

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  load_babel.ps1  load_babel.sh  requirements.txt  shell.nix
.github/ISSUE_TEMPLATE/: bug.md  consulta-de-desarrollo.md  consulta-general.md  petición-de-funcionalidad.md
docs/: entities.html  index.html  search.js  senales.ods
docs/config/: path_handler.html
docs/entities/: courses.html  grades.html  tasks.html
resources/config/: last_state.json
resources/locale/: es.json
resources/locale/en/LC_MESSAGES/: messages.po
resources/locale/es/LC_MESSAGES/: messages.po
resources/locale/fr/LC_MESSAGES/: messages.po
resources/qss/: home_view.qss  main_window.qss
src/: PUCalendarApp.py  main.cpp  main.cxx  main.py
src/common/: __init__.py  entities.py
src/config/: __init__.py  default_entries.sql  defaults.ini  path_handler.py  paths.json  schema.sql  static_paths.py  text_keys.py
src/controller/: logic.cxx  logic.h
src/controllers/: courses.py  data_interacter.py  database_handler.py  driver.py  study_session.py
src/entities/: __init__.py  courses.py  grades.py  tasks.py
src/gui/: grade_builder.py  main_window.py  ventana.cxx  ventana.h
src/gui/other_views/: all_classes.py
src/gui/tabs_views/: __init__.py  agenda.py  calendar.py  courses.py  home.py
src/gui/widgets/: __init__.py  boxes.py  canva.py  dialogs.py  misc.py  window_types.py
src/models/: courses.py
src/utils/: __init__.py  buscacursos.py  i18n.py
usr/: win.json
